# sp0tify

./: README.md  package.json  pnpm-lock.yaml
apps/app/: capacitor.config.ts  index.html  ionic.config.json  package.json  tailwind.config.js  vite.config.ts
apps/app/public/: manifest.json
apps/app/src/: App.tsx  main.tsx  utils.ts
apps/app/src/components/: ArtistPill.tsx  InfoPills.tsx  SeachTags.tsx  Sidebar.tsx
apps/app/src/components/SearchSections/: Hit.tsx  Hits.tsx  TopHits.tsx  index.tsx
apps/app/src/hooks/: useQueryState.tsx
apps/app/src/models/album/: index.ts  tracks.ts
apps/app/src/models/search/: all.ts
apps/app/src/models/song/: index.ts
apps/app/src/pages/: Activity.tsx  AlbumPage.tsx  Home.tsx  Library.tsx  Search.tsx  SongPage.tsx
apps/app/src/services/: album.service.ts  http.service.ts  search.service.ts  song.service.ts
apps/app/src/store/: hits.ts
apps/media/: package.json
apps/media/src/: app.ts  util.ts
apps/media/src/api/: emojis.ts  index.ts  proxy.ts
apps/server/: .gitignore  Discovery.md  Pipfile  README.md  Spacefile  package.json  pyproject.toml  requirements.txt  vercel.json
apps/server/api/: index.py
apps/server/src/: genius.py  main.py  string_utils.py
apps/server/src/models/: artist.py  search.py  song.py
apps/server/src/routers/: album.py  artist.py  charts.py  lyrics.py  search.py  song.py  utils.py  video.py
